<resources>
    <string name="app_name">Message</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_message_trans_record">MessageTransRecordActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_log">LogActivity</string>

    <string name="goto_system_setting"><u>Go to System Setting</u></string>
    <string name="goto_error_log"><u>Go to error log</u></string>

    <string name="service_status">Service Status:</string>
    <string name="service_is_not_running">service_is_not_running</string>
    <string name="service_is_running">service is running</string>
    <string name="service_is_starting">service is starting</string>
    <string name="click_to_start_up"><u>Click to start up</u></string>

    <string name="save_fail_check_please">save fail,check net connection please!</string>
    <string name="save_success">save success</string>
    <string name="api_url">Api Url:</string>
    <string name="frequency">Frequency:</string>
    <string name="battery">Battery:</string>

    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="all">All</string>
    <string name="query">Query</string>
    <string name="go_to_version"><u>Go to Version</u></string>
    <string name="version">Version</string>
    <string name="current_version">Current Version Name:</string>
    <string name="check_update">Check Update</string>

    <string name="new_version_available">New Version Available</string>
    <string name="agree">Agree</string>
    <string name="next_time">Next time</string>

    <string name="title_activity_version">VersionActivity</string>
    <string name="title_activity_error_log">ErrorLogActivity</string>
    <string name="updating">Is updating...</string>
    <string name="waiting_please">Waiting please ,thank you for your cooperation!</string>
    <string name="get_version_error">get version error</string>
    <string name="this_is_latest_version">This is the latest version.</string>
</resources>
