<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/white"
    tools:context="com.detect.amar.messagedetect.main.MainActivity">

    <TextView
        android:textSize="18sp"
        android:id="@+id/gotoSystemSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goto_system_setting"
        android:textStyle="italic" />


    <RelativeLayout
        android:background="@drawable/part"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:textSize="18sp"
            android:id="@+id/status_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_status" />

        <TextView
            android:textSize="18sp"
            android:id="@+id/SystemStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/status_title"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:text="@string/service_is_not_running" />

        <TextView
            android:textSize="18sp"
            android:id="@+id/startService"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/SystemStatus"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:text="@string/click_to_start_up"
            android:textStyle="italic" />
    </RelativeLayout>
</LinearLayout>
