<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:amar="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.detect.amar.messagedetect.log.ErrorLogActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <EditText
            android:layout_below="@+id/error_query"
            android:id="@+id/error_from"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="2014-11-01"
            android:textSize="12sp" />

        <EditText
            android:layout_alignBaseline="@+id/error_from"
            android:id="@+id/error_to"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/error_from"
            android:text="2014-11-01"
            android:textSize="12sp" />

        <TextView
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_marginLeft="5dp"
            android:id="@+id/error_query"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/query" />

        <TextView
            android:visibility="gone"
            android:id="@+id/error_select_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/error_query"
            android:layout_toRightOf="@+id/error_query"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/all" />

        <TextView
            android:visibility="gone"
            android:id="@+id/error_multi_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/error_query"
            android:layout_toRightOf="@+id/error_select_all"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/delete" />

        <TextView
            android:id="@+id/error_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/error_query"
            android:layout_toRightOf="@+id/error_multi_delete"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/edit" />
    </RelativeLayout>

    <View
        android:id="@+id/error_divier"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@color/grey" />

    <com.detect.amar.messagedetect.widget.SlideRecyclerView
        android:id="@+id/slide_recycle_list"
        android:layout_width="match_parent"

        android:layout_height="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="#ffffff"
        amar:rowViewLayoutResId="@layout/error_log_item"
        amar:slideLayoutResId="@layout/default_slide"
        amar:slideWidth="100dp" />
    <!--amar:slideContentResId="@id/slide_content"-->

</LinearLayout>
